Good commit Added Fetch ability to JS script. However, needs further improvement. This commit is BEFORE migrating changes to the models. Future Change: added foregn key to Fact and Category models.

--- a/all_apps/Facts/templates/facts_css/1_facts.css
+++ b/all_apps/Facts/templates/facts_css/1_facts.css
@@ -47,7 +47,7 @@
     color: black;
 }
 
-.facts-container .right-side .display-region{
+.facts-container .right-side .display-wrapper{
     
     padding-left: 40px;
     padding-top: 20px;
