--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -20,7 +20,7 @@
     
     This website is implemented with the following:</br>
     a) Backend: Python Django </br>
-    b) Frontend: Simple HTML, CSS, and JavaScript (no React at this time)
+    b) Frontend: Simple HTML, CSS, and JavaScript (no AJAX at this time)
 
 
 </div>
