First commit on 02_Aug

--- a/all_apps/Facts/templates/facts_templates/1_facts_main_page.html
+++ b/all_apps/Facts/templates/facts_templates/1_facts_main_page.html
@@ -59,10 +59,10 @@
 
 </div>
 
-<script id="js_script" src="{% static '1_facts_main_page.js'%}" url = "{% url 'from_category' %}">
+<!-- <script id="js_script" src="{% static '1_facts_main_page.js'%}" url = "{% url 'from_category' %}"> 
     
 </script>
-
+-->
 
 
 
