The first part of Facts app is fully working.

--- a/all_apps/Facts/templates/facts_templates/1_facts_main_page.html
+++ b/all_apps/Facts/templates/facts_templates/1_facts_main_page.html
@@ -12,7 +12,7 @@
 
 <div class="facts-description">
     <div class="base-text">
-        This app will display a ranodom fact about me. Press Give button and obtain a random fact.
+        This app will display a random fact about me. Press Give button and obtain a random fact.
         If you want you can select the specific category.Then, the received facts will be related
         to a selected category.
     </div>
@@ -49,7 +49,7 @@
             <div id="facts-display"> </div>
                 
 
-            </p>
+            
 
         </div>
 
