--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -12,7 +12,7 @@
     
     <p>My name is Nursultan Shokobalinov. I am a former Physics teacher.</br>
     
-    Right now I am learning programming in order to become a Sofware Developer
+    Right now I am learning various tools in order to become a Sofware Developer
     with a backend concentration.</p>
     
     <p>Welcome to my small Heroku hosted website, where hopefully I will place </br>     
@@ -20,7 +20,7 @@
     
     This website is implemented with the following:</br>
     a) Backend: Python Django </br>
-    b) Frontend: Simple HTML, CSS, and JavaScript (no AJAX at this time)
+    b) Frontend: Simple HTML, CSS, and JavaScript (no SPA at this time)
 
 
 </div>
