--- a/all_apps/Facts/templates/facts_templates/1_facts_main_page.html
+++ b/all_apps/Facts/templates/facts_templates/1_facts_main_page.html
@@ -13,8 +13,18 @@
 <div class="facts-description">
     <div class="base-text">
         This app will display a random fact about me. Select a category and press 
-        <span>Give</span> button.  
+        <span class="button">Give</span> button.
+
     </div>
+    
+    <div class="base-text">
+
+        You can also make your own facts and 
+        <a href="#" ><span class="authentication">Add</span></a>
+        them to the website
+
+    </div>
+
 </div>
 
 <div class="facts-container">
