--- a/all_apps/Facts/templates/facts_templates/1_facts_main_page.html
+++ b/all_apps/Facts/templates/facts_templates/1_facts_main_page.html
@@ -17,10 +17,13 @@
 
     </div>
     
-    <div class="base-text">
-
-        You can also make your own facts and 
-        <a href="#" ><span class="authentication">Add</span></a>
+    <div class="base-text">  
+        {% if user.is_authenticated%}
+            <a href="{% url 'user_facts_page' %}" ><span class="authentication">Add</span></a>
+        {% else %}
+            <a href="{% url 'register' %}" ><span class="authentication">Add</span></a>
+        {% endif %}
+        
         them to the website
 
     </div>
