--- a/all_apps/User/templates/user_css/1_register.css
+++ b/all_apps/User/templates/user_css/1_register.css
@@ -36,7 +36,7 @@
 	font-size: 15px;
 	margin: 0;
 	outline: 0;
-	padding: 10px;
+	padding: 15px;
 	width: 100%;
 	box-sizing: border-box; 
 	-webkit-box-sizing: border-box;
@@ -47,4 +47,34 @@
 	box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
 	margin-bottom: 30px;
 
+}
+
+
+.tooltip_div .tooltiptext{
+    visibility: hidden;
+    position: absolute;
+    z-index: 1;
+    
+    background-color:cornsilk;
+    text-align: center;
+    padding: 5px 5px;
+    border-radius: 6px;
+    border: 1px solid;
+    border-color:black;
+    
+}
+
+
+
+.tooltip_div .tooltiptext::after{
+    content: " ";
+    position: absolute;
+    
+    top: 50%;
+    right: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color:transparent black transparent transparent;
+    
 }
