--- a/templates/header.html
+++ b/templates/header.html
@@ -3,10 +3,19 @@
 
 <div class="header">
 
-    <img src="" alt="">
-    <h1 class="site-name"> <a href="{% url 'main' %}"> Random Apps</a> </h1>
+    <div class="left">
+        <img src="" alt="">
+        <h1 class="site-name"> <a href="{% url 'main' %}"> Random Apps</a> </h1>
+    </div>
     
-    
+    <div class="right">
+        {% if user.is_authenticated %}
+            <div class="user">
+                {{user}}
+            </div>
+        {% endif %}   
+    </div>
+     
 
 
 
