--- a/templates/header.html
+++ b/templates/header.html
@@ -2,18 +2,35 @@
 <link rel="stylesheet" href="{% static 'css/main_css/header.css' %}" type="text/css" />
 
 <div class="header">
+    
 
-    <div class="left">
+    <div class="col">
         <img src="" alt="">
         <h1 class="site-name"> <a href="{% url 'main' %}"> Random Apps</a> </h1>
     </div>
     
-    <div class="right">
+    
+    
+    <div class="col">
+       
+        <div class="log_info">
         {% if user.is_authenticated %}
-            <div class="user">
-                {{user}}
-            </div>
-        {% endif %}   
+            
+
+                <div class="user">{{user}} </div>
+                
+                <div class="log"> <a href="{%url 'logout' %}">Logout</a>  </div>
+           
+        
+        {% else %}   
+                    {% url 'login' as login_page %}
+                
+                    {% if request.path != login_page %}
+                        <div class="log"><a href="{%url 'login' %}">Login</a>  </div>
+                    {% endif%}
+        {%endif%}
+        </div>
+    
     </div>
      
 
