--- a/all_apps/Facts/templates/facts_templates/1_facts_main_page.html
+++ b/all_apps/Facts/templates/facts_templates/1_facts_main_page.html
@@ -6,27 +6,36 @@
 
 {% load static%}
 
-<link rel="stylesheet" href="{% static '1_facts.css'%}">
+<link rel="stylesheet" href="{% static '1_facts_main_page.css'%}">
 <link rel="stylesheet" href="{% static 'css/main_css/base.css'%}">
 
 
 <div class="facts-description">
     <div class="base-text">
         This app will display a random fact about me. Select a category and press 
-        <span class="button">Give</span> button.
-
-    </div>
-    
-    <div class="base-text">  
-        {% if user.is_authenticated%}
-            <a href="{% url 'user_facts_page' %}" ><span class="authentication">Add</span></a>
-        {% else %}
-            <a href="{% url 'register' %}" ><span class="authentication">Add</span></a>
-        {% endif %}
+        <span class="button">Give</span> button.<br> 
         
-        them to the website
+        {% if user.is_authenticated %}
 
+           <span class="user_name"> {{user.name}}</span> , you can add your own facts by clicking here.
+        
+        {% else %}
+        
+
+        <span> 
+                 You can 
+           
+           <span><a href="{%url 'register' %}">register</a> </span>  
+                            
+           to make your own page of facts.
+        
+        </span>
+
+        {% endif %}
     </div>
+
+    
+
 
 </div>
 
