--- a/static/css/main_css/header.css
+++ b/static/css/main_css/header.css
@@ -3,8 +3,22 @@
     grid-area: header;
     background-color: #e3e3e3;
     margin-bottom: 20px;
-    
+    display: flex;
 }
+
+.col{
+
+    flex: 1;
+    margin: auto;
+
+}
+
+.col .log_info{
+    text-align: right;
+    margin-top: 30px;
+    margin-right: 30px;
+}
+
 
 .site-name{
 
@@ -23,3 +37,4 @@
     color: green;    
 
 }
+
