--- a/templates/account_activation.html
+++ b/templates/account_activation.html
@@ -7,12 +7,13 @@
 </head>
 <body>
     
-        <h2> Hello!</h2>
-
+        <h2> Hello! {{name}} {{surname}}</h2>
+            
         <div>
-           <a href="https://gmail.com"> Press on me to activate your account </a> 
+           <a href={{abs_url}}> Click on me to Activate your account and Login</a> 
         </div>
-
+        
+        
 
 </body>
 </html>
