--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -7,6 +7,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/main_css/main.css' %}" type="text/css" />
 
+
 <div class="welcome-message" >
     <p>Hello! </p >
     
@@ -18,9 +19,23 @@
     <p>Welcome to my small Heroku hosted website, where hopefully I will place </br>     
     unrelated to each other apps I made during my learning journey.</p>
     
-    This website is implemented with the following:</br>
-    a) Backend: Python Django </br>
-    b) Frontend: Simple HTML, CSS, and JavaScript (no SPA at this time)
+    <p>
+        This website is implemented with the following:</br>
+        a) Backend: Python Django </br>
+        b) Frontend: Simple HTML, CSS, JavaScript, Fetch API + DRF (no SPA at this time) <br>
+        c) DataBase: PostgreSQL: Heroku provided limited version, up to 20 concurrent connections</br>
+
+    </p>
+    
+    <div> 
+    <p>
+        If you want to report some issue or a bug related to the BACKEND functionality, please leave a message.
+    </p>
+    
+    </div>
+    
+
+    
 
 
 </div>
